Removed annotation references ValueBased and Stable and cleaned bld a…